styles.css
html {
    text-align: center;
    color: white;
    background: black;
}

a {
    color: white;
}

a:hover {
    color: thistle;
}

header {
    background-color: black;
    background-image: url(images/logo.jpg);
    background-position: center center;
    background-repeat: no-repeat;
    height: 100vh;
}

h1,
h2 {
    margin: 0;
}

nav a {
    display: inline-block;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 20px;
    margin-bottom: 20px;
    border-radius: 5px;
    padding: 5px;
    opacity: 0.8;
    font-size: 26px;
    text-transform: uppercase;
}

body {
    margin: 0;
}

.contact {
    padding: 0;
    padding-top: 40px;
    background-color: slateblue;
}

.contact iframe {
    margin: 0px;
    margin-top: 40px;
    display: block;
}

.menu {
    /* min-height: 100vh; */
    background-image: url(images/chicken2.jpg);
    background-size: cover;
    background-attachment: fixed;
    padding-top: 40px;
    padding-bottom: 40px;
}

.pool {
    height: 100vh;
    padding-top: 40px;
    padding-bottom: 40px;
    background-image: url(images/pool2.jpeg);
    background-size: cover;
    background-attachment: fixed;
}

h2 {
    font-size: 48px;
}

p {
    font-family: "Adobe Caslon Pro", "Times New Roman", serif;
    font-size: 22px;
}

.section-content-wrapper {
    margin: auto;
    width: 80%;
    max-width: 1200px;
}

section {
    overflow: auto;
}

footer {
    padding: 10px;
}

